--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,16 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
 # Package Files #
 *.jar
 *.war
@@ -18,6 +27,17 @@
 *.zip
 *.tar.gz
 *.rar
-
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+### JRebel ###
+rebel.xml
+### MAC ###
+.DS_Store
+### Other ###
+logs/
+temp/
