--- a/my-dependencies-pom/pom.xml
+++ b/my-dependencies-pom/pom.xml
@@ -42,7 +42,7 @@
         <!-- log -->
         <slf4j.version>1.7.25</slf4j.version>
         <jcl_version>1.2</jcl_version>
-        <log4j_version>2.11.1</log4j_version>
+        <log4j_version>1.2.16</log4j_version>
         <logback_version>1.2.2</logback_version>
         <log4j2_version>2.11.1</log4j2_version>
         <!-- database -->
@@ -294,12 +294,12 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
-                <version>${log4j_version}</version>
+                <version>${log4j2_version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>${log4j_version}</version>
+                <version>${log4j2_version}</version>
             </dependency>
             <!-- Log End -->
             <!-- Json Begin -->
