初始化框架

--- a/my-commons/pom.xml
+++ b/my-commons/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>log4j-core</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
         <!-- Log End -->
 
         <!-- Commons Begin -->
