--- a/my-dependencies-pom/pom.xml
+++ b/my-dependencies-pom/pom.xml
@@ -51,6 +51,7 @@
         <mysql_version>8.0.14</mysql_version>
         <mybatis_version>3.4.6</mybatis_version>
         <mybaits_spring_version>1.3.2</mybaits_spring_version>
+        <pagehelper_version>5.1.8</pagehelper_version>
         <!-- json -->
         <jackson_version>2.9.5</jackson_version>
         <gson_version>2.8.5</gson_version>
@@ -59,10 +60,9 @@
         <apache_httpclient_version>4.5.5</apache_httpclient_version>
         <apache_httpcore_version>4.4.11</apache_httpcore_version>
         <kaptcha_version>2.3.2</kaptcha_version>
-        <lombok_version>1.16.18</lombok_version>
+        <lombok_version>1.18.4</lombok_version>
 
         <junit_version>4.12</junit_version>
-        <lombok_version>1.16.18</lombok_version>
     </properties>
 
 
@@ -361,6 +361,11 @@
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis-spring</artifactId>
                 <version>${mybaits_spring_version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper</artifactId>
+                <version>${pagehelper_version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
