--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 
     <distributionManagement>
         <repository>
-            <id>nexus-releases</id>
+            <id>nexus3-releases</id>
             <name>Nexus Release Repository</name>
             <url>http://192.168.153.52:9998/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>nexus-snapshots</id>
+            <id>nexus3-snapshots</id>
             <name>Nexus Snapshot Repository</name>
             <url>http://192.168.153.52:9998/repository/maven-snapshots/</url>
         </snapshotRepository>
@@ -23,7 +23,7 @@
 
     <repositories>
         <repository>
-            <id>nexus</id>
+            <id>nexus3</id>
             <name>Nexus Repository</name>
             <url>http://192.168.153.52:9998/repository/maven-public/</url>
             <snapshots>
@@ -36,7 +36,7 @@
     </repositories>
     <pluginRepositories>
         <pluginRepository>
-            <id>nexus</id>
+            <id>nexus3</id>
             <name>Nexus Plugin Repository</name>
             <url>http://192.168.153.52:9998/repository/maven-public/</url>
             <snapshots>
@@ -56,6 +56,7 @@
 
         <maven_deploy_version>2.8.2</maven_deploy_version>
         <maven_compiler_version>3.6.0</maven_compiler_version>
+        <maven_surefire_version>2.19.1</maven_surefire_version>
         <skip_maven_deploy>false</skip_maven_deploy>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -77,6 +78,37 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <profiles>
+        <profile>
+            <id>hudson</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java8-vm-args</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
+            <properties>
+                <!-- Build args -->
+                <!-- if you run dubbo on java8+,please use these vm args -->
+                <argline>-server -Xms256m -Xmx512m -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=128m -Dfile.encoding=UTF-8
+                    -Djava.net.preferIPv4Stack=true
+                </argline>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <!-- Used for packaging NOTICE & LICENSE to each sub-module jar-->
         <resources>
@@ -115,7 +147,15 @@
                     <encoding>${file_encoding}</encoding>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven_surefire_version}</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
